--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,4 @@
 language: java
 script: mvn clean install
+after_success:
+  - curl --header "X-Api-Key: $CLOUDSMITH_API_TOKEN" https://api-prd.cloudsmith.io/v1/user/self/
