--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: java
 script: mvn clean install
 after_success:
-  - curl --header "$CLOUDSMITH_TOKEN_HEADER" -X GET https://api-prd.cloudsmith.io/v1/user/self/
+  - curl --header 'X-Api-Key: '$CLOUDSMITH_API_TOKEN'' -X GET https://api-prd.cloudsmith.io/v1/user/self/
