--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: java
 script: mvn clean install
-after_success:
-  "curl --header 'X-Api-Key: '$CLOUDSMITH_API_TOKEN'' -X GET https://api-prd.cloudsmith.io/v1/user/self/"
+deploy:
+  provider:script
+  script:deploy.sh
