--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ deploy:
   script: sh deploy.sh
 jobs:
   include:
-    if: tag
+    if: tag = v1
     - script: sh deploy.sh
     - script: sh deploy.sh
