--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
+language: java
 jobs:
   include:
-    -stage: deploy
-    language: java
+    -stage: test
     script: mvn clean install
     script: mvn clean install
     deploy:
