--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ jobs:
   include:
     - stage: test
       script: mvn clean install
-      script: mvn clean install
+      script: mvn clean install -U
       deploy:
         provider: script
         script: sh deploy.sh
